# cuda-vs-rocm-kernels

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  benchmark_main.cpp
docs/: analysis_notes.md  environment.md  project_brief.md
include/pgkl/: cli.hpp  matmul_tiled.hpp  metadata.hpp  placeholders.hpp  reduction.h  reduction.hpp  stencil2d.hpp  timing.hpp  types.hpp  utils.hpp
scripts/: colab_configure.sh
src/common/: cli.cpp  metadata.cpp
src/cpu/: matmul_tiled_cpu.cpp  reduction_cpu.cpp  stencil2d_cpu.cpp
src/cuda/: cuda_utils.cuh  matmul_tiled_cuda.cu  metadata_cuda.cu  reduction_cuda.cu  stencil2d_cuda.cu
src/hip/: hip_utils.hpp  matmul_tiled_hip.cpp  metadata_hip.cpp  reduction_hip.cpp  stencil2d_hip.cpp
src/sycl/: matmul_tiled_sycl.cpp  metadata_sycl.cpp  reduction_sycl.cpp  stencil2d_scyl.cpp  stencil2d_sycl.cpp  sycal_compat.hpp  sycl_timing.hpp
tests/: CMakeLists.txt  test_main.cpp
